@@ -1,6 +1,7 @@
 --------------------------------------------------------------------------------
  Fusion 1.212 - June 30th, 2004
 --------------------------------------------------------------------------------
+- 06-22-04: Fixed #963 - M/F registeration conflict. Multiple account creation with same username. [AlexKreuz] 
 - 06-22-04: Accidentally put vit instead of agi. [Trihan]
 - 06-22-04: Forgot to update agi when Quagmire expires. [Trihan]
 - 06-22-04: Fixed #651 - Quagmire not lasting long enough, and made it halve agi. [Trihan]
